--- a/source/exceptional.core/Exceptional.csproj
+++ b/source/exceptional.core/Exceptional.csproj
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptional.cs" />
-    <Compile Include="Ion.cs" />
+    <Compile Include="ExceptionHandler.cs" />
+    <Compile Include="IHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
