--- a/source/exceptional.core/Exceptional.csproj
+++ b/source/exceptional.core/Exceptional.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6F4B4FC3-B5A3-4CEE-B13A-7549887B3F5C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rainbow.Exceptional</RootNamespace>
+    <RootNamespace>Rainbow.Exceptions</RootNamespace>
     <AssemblyName>Rainbow.Exceptional</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -42,7 +42,7 @@
     <Compile Include="..\..\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ExceptionExtensions.cs" />
+    <Compile Include="Exceptional.cs" />
     <Compile Include="ExceptionHandler.cs" />
     <Compile Include="IHandle.cs" />
   </ItemGroup>
