--- a/tests/exceptional.core.tests.unit/exceptional.core.tests.unit.csproj
+++ b/tests/exceptional.core.tests.unit/exceptional.core.tests.unit.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExceptionalTests.cs" />
+    <Compile Include="ExceptionalSpec.cs" />
+    <Compile Include="ExceptionalAcceptanceTests.cs" />
+    <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="OnSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
